--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
-Copyright 2025 David Navarre <David.Navarre@irit.fr>.
+# Copyright 2025 ZHANG Kaiyang <zhangkaiyangfr@126.com>.
 
 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
